# Semesterthesis

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  InstallPoetry  README.md  example_rbe2.bdf  impose_rbe2_process.py  pyproject.toml
examples/: Materials.json  ProjectParameters.json  model.mdpa  simulation_parameters.json  truss.mdpa  x_movable_rod.bdf
examples/x_movable_rod/kratos/: materials.json  simulation_parameters.json
examples/x_movable_rod/nastran/: x_movable_rod.bdf
nastran_to_kratos/: __init__.py  kratos_to_nastran.py  nastran_to_kratos.py
nastran_to_kratos/Simple Test/: simple_rbe2.bdf  testt.py
nastran_to_kratos/kratos/: __init__.py  kratos_simulation.py
nastran_to_kratos/kratos/material/: __init__.py  material.py
nastran_to_kratos/kratos/model/: __init__.py  _util.py  condition.py  element.py  model.py  node.py  submodel.py
nastran_to_kratos/kratos/simulation_parameters/: __init__.py  constraint.py  load.py  simulation_parameters.py
nastran_to_kratos/nastran/: __init__.py  _nastran_entry.py  grid.py  nastran_simulation.py
nastran_to_kratos/nastran/bulk_data/: __init__.py  _nastran_bulk_data.py  bulk_data_section.py  crod.py  force.py  grid.py  spc.py
nastran_to_kratos/nastran/bulk_data/entries/: __init__.py  _bulk_data_entry.py  conrod.py  crod.py  force.py  grid.py  mat1.py  prod.py  rbe2.py  spc.py
nastran_to_kratos/nastran/case_control/: __init__.py  _case_control_enum.py  analysis.py  case_control_section.py  displacement.py  strain.py  stress.py  subcase.py
nastran_to_kratos/nastran/entries/: __init__.py  crod.py  force.py  prod.py  spc.py
nastran_to_kratos/translation_layer/: __init__.py  connector.py  constraint.py  export_rbe2_to_json.py  load.py  material.py  point.py  translation_layer.py
nastran_to_kratos/translation_layer/constraints/: __init__.py  constraint.py
nastran_to_kratos/translation_layer/elements/: __init__.py  connector.py  element.py  material.py  point.py
nastran_to_kratos/translation_layer/loads/: __init__.py  load.py
test/: test_kratos_to_nastran.py  test_nastran_to_kratos.py  verify_kratos.py
test/kratos/: test_kratos_simulation.py
test/kratos/material/: test_material.py
test/kratos/model/: test_model.py  test_node.py  test_submodel.py
test/nastran/: test_crod.py  test_grid.py  test_nastran_simulation.py
test/nastran/bulk_data/: test_bulk_data_section.py
test/nastran/bulk_data/entries/: test_Conrod.py  test_crod.py  test_force.py  test_grid.py  test_mat1.py  test_prod.py  test_rbe2.py  test_spc.py
test/nastran/case_control/: test_case_control_section.py  test_subcase.py
test/nastran/entries/: test_crod.py  test_force.py  test_grid.py  test_prod.py  test_spc.py
test/translation_layer/constraints/: test_constraint.py
test/translation_layer/elements/: test_connector.py  test_element.py  test_material.py  test_point.py  test_translation_layer.py
test/translation_layer/loads/: test_load.py
vtk_output/: Structure_0_1.vtk
